Started Working on the JS code. Added more BG images.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </header>
       <main>
         <section class="location">
-          <div class="city">Fortaleza, CE</div>
+          <div class="city">Fortaleza, BR</div>
           <div class="date">Monday 13 March 2023</div>
         </section>
         <div class="current">
