--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
       </header>
       <main>
         <section class="location">
-          <div class="city">Fortaleza, BR</div>
-          <div class="date">Monday 13 March 2023</div>
+          <div class="city">
+            Which city do you want to know the weather now?
+          </div>
+          <div class="date"></div>
         </section>
         <div class="current">
-          <div class="temp">28 <span>°c</span></div>
-          <div class="weather">Cloudy</div>
-          <div class="hi-low">25°c / 30°c</div>
+          <div class="temp"><span></span></div>
+          <div class="weather"></div>
+          <div class="hi-low"></div>
         </div>
       </main>
     </div>
