Added a few customizations
Added a switch statement to update the background image depending on the weather and wrote the text in portuguese :D

--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
           type="text"
           autocomplete="off"
           class="search-box"
-          placeholder="Search for a city..."
+          placeholder="Digite o nome da cidade..."
         />
       </header>
       <main>
         <section class="location">
-          <div class="city">
-            Which city do you want to know the weather now?
-          </div>
+          <div class="city">Você gostaria de saber o clima de qual cidade?</div>
           <div class="date"></div>
         </section>
         <div class="current">
